overflow hidden fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,4 +20,6 @@ img {
 
 .overflow-hidden {
   overflow: hidden;
+  touch-action: none;
+  -ms-touch-action: none;
 }
